--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,3 @@
-
 table {
 	
 	border-collapse: collapse;
@@ -14,6 +13,12 @@ h1 {
   font-family: 'Open Sans', sans-serif;
   color: white;
   text-align: center;
+}
+img {
+    margin: 0px;
+    padding: 50px;
+    width: 200px;
+    height: 200px
 }
 footer {
   text-align: center;
