--- a/mystyle.css
+++ b/mystyle.css
@@ -11,7 +11,7 @@ table, th, td {
 h1 {
   font-style: normal;
   font-family: 'Open Sans', sans-serif;
-  color: white;
+  color: black;
   text-align: center;
 }
 img {
